# KRaft

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  restfox.json  temp.yaml
!Docs/: HowToHost.md
!Helm/: README.md  betacode.yaml  db.yaml
!Helm/auth/: svc.yaml
!Helm/clustermanage/: deploy.yaml
!Helm/database/: deploy.yaml
!Helm/frontend/: deploy.yaml  svc.yaml
!Helm/kraft/: Chart.yaml  values.yaml
!Helm/kraft/templates/: _helpers.tpl  betacode.yaml  config.yaml  db.yaml  frontend.yaml  global-config.yaml  jwtsecret.yaml  kraft-core.yaml  rbac.yaml  secrets.yaml
!Helm/kraft/templates/auth/: deploy.yaml  ingress.yaml
!Helm/kraft/templates/clustermanage/: deploy.yaml  ingress.yaml  svc.yaml
!Helm/kraft/templates/database/: deploy.yaml  pvc.yaml  svc.yaml
!Helm/kraft/templates/frontend/: deploy.yaml  ingress.yaml
!Helm/kraft/templates/rbac/: clusterrole.yaml
!Helm/kraft/templates/resourcesmanage/: deploy.yaml  ingress.yaml  svc.yaml
!Helm/rbac/: serviceaccount.yaml
!Helm/resourcesmanage/: deploy.yaml
.github/workflows/: build.yml  ci.yml  frontend.yml
Restfox/: cluster create.json  clusters.json  create password.json  failed-prod-login.json  get logs.json  get user.json  get-kubeconfig.json  list clusters.json  login.json  register without betacode.json  resources-namespace.json  resources.json  restfox.json
auth/: Cargo.toml  Containerfile  Dockerfile
auth/kubernetes/: deploy.yaml  svc.yaml
auth/src/: auth.rs  class.rs  db_connect.rs  jwt.rs  main.rs  user.rs  util.rs
cloudflare/: README.md
cloudflare-manage/: Dockerfile  main.py
cluster-create/: README.md
cluster-manage/: Cargo.toml  Containerfile  Dockerfile  README.md
cluster-manage/src/: class.rs  clusters.rs  db_connect.rs  ingress.rs  jwt.rs  logs.rs  main.rs  oldjwt.rs  tlssan.rs  utils.rs  validatename.rs  vcp.rs  workspace.rs
database/: .gitignore  Dockerfile  README.md  create.sql  delete.sql  docker-compose.yaml
database/kubernetes/: deploy.yaml  svc.yaml
frontend/: .gitignore  Containerfile  Dockerfile  admin.html  index.html  nginx.conf
frontend/admin/: betacode.html  users.html
frontend/kubernetes/: svc.yaml
frontend/sub/: account.html  create.html  domains.html  login.html  pricing.html  register.html  view.html
frontend/sub/about/: 0.html  1.html  2.html  3.html
global-manifests/: global-config.yaml
kraft/: .dockerignore  Containerfile
kraft-core/: Cargo.toml  Containerfile
kraft-core/src/: db_connect.rs  main.rs
kraft-core/src/Controllers/: AdminController.rs  AuthController.rs  BetacodeController.rs  ClusterController.rs  DBHelper.rs  ResourceController.rs  TowonelController.rs  UserController.rs  WorkspaceController.rs  mod.rs  utils.rs
kraft-core/src/Models/: Betacode.rs  Cluster.rs  Config.rs  Domain.rs  JWT.rs  Password.rs  Resources.rs  Towonel.rs  User.rs  mod.rs
kraft/src/: db_connect.rs  main.rs
kraft/src/Controllers/: AuthController.rs  JWTController.rs  LogsController.rs  UserController.rs  utils.rs
kraft/src/Models/: Cluster.rs  JWT.rs  Password.rs
kubernetes/: config.yaml  frontend.yaml  rbac.yaml  secrets.yaml  vcp.yaml
manifests/: .gitignore  README.md  betacode.yaml  global-config.yaml  ingress.yaml  ingressroute.yaml  vcp.yaml
manifests/auth/: deploy.yaml  ingress.yaml
manifests/clustermanage/: deploy.yaml  ingress.yaml  pvc.yaml
manifests/database/: deploy.yaml  pg-deploy.yaml  pvc.yaml  svc.yaml
manifests/frontend/: deploy.yaml  ingress.yaml
manifests/globalconfig/: global-config.yaml  ingress.yaml  ingressroute.yaml  redirect-old-route.yaml  secrets_example.yaml  vcp.yaml
manifests/kraft/: deploy.yaml  ingress.yaml  svc.yaml
manifests/rbac/: clusterrole.yaml  rolebinding.yaml  serviceaccount.yaml
manifests/resourcesmanage/: deploy.yaml  ingress.yaml
resource-manage/: Containerfile  Dockerfile  api.py  storage.py  use.py  utils.py
resources-manage/: Cargo.toml  Dockerfile  api.py  main.py  nodes.py  pods.py  requirements.txt  storage.py  utils.py
resources-manage/src/: main.rs  resources.rs  util.rs
workspace/: Containerfile  Dockerfile
workspace/kubernetes/: ingressroute.yaml  statefulset.yaml  svc.yaml
workspace/nix/: main.nix
workspace/sidecar/: Cargo.toml  Containerfile
workspace/sidecar/src/: main.rs
