[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth-api"
path="src/main.rs"

[dependencies]
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-web = "4.11.0"
argon2 = "0.5.3"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
mysql = "26.0.0"
mysql_common = "0.35.4"
serde = "1.0.219"
serde_json = "1.0.140"
# UPDATED: Added "macros" for sqlx::query! and sqlx::query_as! to work
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "macros"] } 
tokio = {version = "1.45.1", features = ["full"]}
uuid = "1.17.0"
rand = "0.8.5"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
log = "0.4.27"

# --- NEW REQUIRED DEPENDENCIES ---

# 1. anyhow: For simplified error handling (used in the delete logic)
anyhow = "1.0.86" 

# 2. k3k-rs: The crate containing the cluster::delete function
# You MUST replace the placeholder path with the actual location of your k3k-rs crate
k3k-rs = { git = "https://github.com/xelab04/k3k-rs" }