[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth-api"
path="src/main.rs"

[dependencies]
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-web = "4.11.0"
argon2 = "0.5.3"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
k3k-rs = { git = "https://github.com/xelab04/k3k-rs" }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
mysql = "26.0.0"
mysql_common = "0.35.4"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = {version = "1.45.1", features = ["full"]}
uuid = {version = "1.17.0", features = ["v4"]}
rand = "0.8.5"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
log = "0.4.27"
mail-builder = "0.4.4"
mail-send = "0.5.2"
