[package]
name = "cluster-manage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
random_word = { version = "0.5.0", features = ["en"] }
serde_json = "1.0.143"
regex = "1.11.2"
