[package]
name = "cluster-manage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
random_word = { version = "0.5.0", features = ["en"] }
serde_json = "1.0.143"
regex = "1.11.2"
k3k-rs = { git = "https://github.com/xelab04/k3k-rs" }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = "1.48.0"
reqwest = "0.12.24"
chrono = "0.4.42"
