[package]
name = "kraft"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "tls-rustls-ring",
  "postgres",
  "chrono",
] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
argon2 = { version = "0.5.3" }
actix-rt = "2.10.0"
k3k-rs = { git = "https://github.com/xelab04/k3k-rs" }
kube = { version = "3.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
actix-web = "4.11.0"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = "1.48.0"
regex = "1.11.2"
reqwest = { version = "0.13.3", features = ["blocking", "rustls"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
log = "0.4.29"
uuid = { version = "1.23.1", features = ["v4"] }
mail-builder = "0.4.4"
mail-send = "0.6.0"
rand = "0.8.6"
serde_yaml = "0.9.34"
