[package]
name = "workspace-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
env_logger = "0.11.8"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
tokio-tungstenite = "0.21"
futures-util = "0.3.31"
rustls = { version = "0.23", features = ["ring"], default-features = false }
